fix wrong font-weight project card headers

--- a/src/components/Projects/ProjectCard/projectCard.scss
+++ b/src/components/Projects/ProjectCard/projectCard.scss
@@ -45,7 +45,7 @@ div.card-body {
     top: -5px;
   }
   h3 {
-    font-weight: 900;
+    font-weight: bold;
   }
   .thumbnail {
     width: 300px;
